whitespace overflow fix mobile

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -391,6 +391,10 @@ a:hover {
     font-size: 1em;
   }
 
+  #intro-responsive {
+    padding-top: 4em;
+  }
+
   #pro-responsive {
     overflow: hidden;
   }
